--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="game/MainMenu.js"></script>
     <script src="game/Game.js"></script>
     <script src="game/Player.js"></script>
+    <script src="game/Coin.js"></script>
     <style>
         body {
             margin: 20px;
