added larger enemy2 that is an extension of enemy

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="game/Game.js"></script>
     <script src="game/Player.js"></script>
     <script src="game/Enemy.js"></script>
+    <script src="game/Enemy2.js"></script>
     <script src="game/Coin.js"></script>
     <style>
         body {
